--- a/style.css
+++ b/style.css
@@ -4,17 +4,11 @@
          padding-bottom: 40px;
 	 font-family: 'Open Sans', Helvetica, Arial, sans-serif;
         }
-       .linediv-l {
-         border-right: 1px white solid;
-        }
-       .linediv-r {
-         border-left: 1px white solid;
-         padding-left: 5px;
-       }
 
-
-   
-
+	.row-fluid {
+   	 width: 100%;
+	 margin-bottom: 100px;
+	}
 
       .heading, .subheading {
         font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
