--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-        body {
+body {
          padding-top: 0px;
          width: 1200px;
          padding-bottom: 40px;
@@ -17,14 +17,18 @@
       
       .navbar{
       	min-height:0px !important;
-      	
       }
-      
+       
+       .navbar-right {
+        width:auto;
+        padding-right:5em;
+       }      
 
       
 	.container{
 	min-width: 1200px !important;
 	padding-top: 30px;
+
 	}
 
 	.actions {
@@ -37,10 +41,6 @@
       p {
         font-size: 18px;
         line-height: 24px;
-      }
-      
-      .tab-content{
-      	overflow:hidden !important;
       }
 
       .pitch {
@@ -65,7 +65,12 @@
       }
 
       .jumbotron {
+  display:block;
 	text-align: center;
+  height:100%;
+  width:100%;
+  margin-right:auto!important;
+  margin-left:auto!important;
 	}
 	.jumbotron h1 {
 	font-size: 100px;
