--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
          padding-top: 0px;
-         width: 1200px;
          padding-bottom: 40px;
 	 font-family: 'Open Sans', Helvetica, Arial, sans-serif;
         }
@@ -52,7 +51,10 @@ body {
 	padding: 2% 0%;
 	}
 
-
+.intro {
+  width:960px;
+  margin:0 auto;
+}
       .video, .thermometer, .order, .social {
         text-align: center;
       }
