--- a/style.css
+++ b/style.css
@@ -102,7 +102,8 @@
       
       
      .main-pareto {
-     	height:3000px;
+     	height: 2600px;
+	margin-top: -400px;
      	overflow:hidden;
      }
 
