--- a/style.css
+++ b/style.css
@@ -75,6 +75,31 @@ img.logo {
      content: none !important;
 }
 
+.caption {
+  text-align: center;
+  font-size:0.9rem;
+  margin-top:-6rem;
+}
+
+.list-cta {
+  font-weight:700;
+  font-size:1.3rem;
+}
+
+.list-cta li {
+  margin:10px 0 15px 45px;
+}
+
+.list-cta ul {
+  font-weight:300;
+  margin-bottom: 30px;
+}
+
+.list-cta address {
+  margin-left:100px;
+  font-size:1rem;
+}
+
 .intro {
   width:960px;
   margin:0 auto;
