--- a/style.css
+++ b/style.css
@@ -106,4 +106,17 @@
 	margin-top: -350px;
      	overflow:hidden;
      }
+     
+     .carousel-caption {
+position: none; 
+left: inherit;
+right: inherit;
+bottom: inherit;
+z-index: 10;
+/* padding-top: 20px; */
+/* padding-bottom: 20px; */
+color: #FFF;
+text-align: center;
+text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+}
 
