--- a/style.css
+++ b/style.css
@@ -3,23 +3,23 @@
          width: 1200px;
          padding-bottom: 40px;
 	 font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-        }
+         }
 
 	.row-fluid {
    	 width: 100%;
 	 margin-bottom: 100px;
 	 margin-top: 25px;
-	}
+	 }
 
-      .heading, .subheading {
+        .heading, .subheading {
         font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
         text-align: center;
-      }
+        }
       
-      .navbar{
+        .navbar{
       	min-height:0px !important;
       	
-      }
+        }
       
 
       
@@ -32,20 +32,17 @@
 	background-color: #343434;
 	padding: 3% 0%;
 	}
-      p.lead {
+	
+        p.lead {
         padding-top: 15px;
-      }
-      p {
+        }
+        p {
         font-size: 18px;
         line-height: 24px;
-      }
+        }
       
-      .tab-content{
-      	overflow:hidden !important;
-      }
-
-      .pitch {
-	padding: 2.5% 0%;
+        .pitch {
+	  padding: 2.5% 0%;
 	}
 	
 	.order {
@@ -61,9 +58,9 @@
         line-height: 124px;
       } 
       
-      div.row {
-        border: 1px solid;
-      }
+        div.row {
+          border: 1px solid;
+        }
 
       .jumbotron {
 	text-align: center;
@@ -107,6 +104,11 @@
      	overflow:hidden;
      }
      
+     .tab-content{
+      	overflow:hidden !important;
+     }
+
+     
      .carousel-caption {
 	position: relative !important;
 	left: inherit !important;
@@ -117,3 +119,7 @@
 	padding-bottom: inherit !important;
 	}
 
+     .carousel-control{
+     	background:none !important;
+     	
+     }
