--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
-        body {
+body {
          padding-top: 0px;
-         width: 1200px;
          padding-bottom: 40px;
 	 font-family: 'Open Sans', Helvetica, Arial, sans-serif;
          }
@@ -18,18 +17,38 @@
       
         .navbar{
       	min-height:0px !important;
+        font-weight:700;
+      }
+       
+       .navbar-right {
+        width:auto;
+        padding:1rem 5rem 0 0;
+       }     
+
+.navbar-right li {padding:0 1rem;}
       	
-        }
       
 
-      
+img.logo {
+  height:50px;
+}
+   
+
+.carousel-control.left {
+  left:-30px;
+}   
+
+.carousel-control.right {
+  right:-60px!important;
+}
 	.container{
 	min-width: 1200px !important;
-	padding-top: 30px;
+	padding-top: 50px;
+
 	}
 
 	.actions {
-	background-color: #343434;
+	background-color: #666;
 	padding: 3% 0%;
 	}
 	
@@ -39,6 +58,10 @@
         p {
         font-size: 18px;
         line-height: 24px;
+      }
+
+      .pitch {
+	padding: 2.5% 0%;
         }
       
         .pitch {
@@ -50,6 +73,84 @@
 	}
 
 
+.dropdown-menu.multi-column {
+    width: 800px;
+}
+
+.dropdown-menu.multi-column .dropdown-menu {
+    display: block !important;
+    position: static !important;
+    margin: 0 !important;
+    border: none !important;
+    box-shadow: none !important;
+}
+.dropdown-menu:before, 
+.dropdown-menu:after {
+     border: none !important;
+     content: none !important;
+}
+
+.caption {
+  text-align: center;
+  font-size:0.9rem;
+  margin-top:-6rem;
+}
+
+.list-cta {
+  font-weight:700;
+  font-size:1.3rem;
+}
+
+.list-cta li {
+  margin:10px 0 15px 45px;
+}
+
+.list-cta ul {
+  font-weight:300;
+  margin-bottom: 30px;
+}
+
+.list-cta address {
+  margin-left:100px;
+  font-size:1rem;
+}
+
+h1, h2 {
+  color:#005555!important;
+}
+
+.statistics h2 {
+  color:#fff!important;
+}
+
+.bkgdlead {
+  letter-spacing: 6px;
+  color:#E6E6E6;
+  font-size:15rem;
+  font-weight:700;
+  margin:7rem 0 -3rem;
+}
+
+.col-lg-4 p {
+  font-size:0.9rem;
+  margin-top: 1rem;
+}
+
+.intro {
+  width:960px;
+  margin:2rem auto;
+  text-align: center;
+}
+
+.intro p {
+  margin:2rem 0;
+  line-height: 1.8rem;
+}
+
+.btn-cta {
+  margin-top:3rem;
+  font-size:3rem;
+}
       .video, .thermometer, .order, .social {
         text-align: center;
       }
@@ -63,7 +164,12 @@
         }
 
       .jumbotron {
+  display:block;
 	text-align: center;
+  height:100%;
+  width:100%;
+  margin-right:auto!important;
+  margin-left:auto!important;
 	}
 	.jumbotron h1 {
 	font-size: 100px;
@@ -78,7 +184,7 @@
         min-height:370px;
       }
 
-      /* Marketing Copy and Footer */
+       /* Marketing Copy and Footer */
       .copy {
         padding-top: 2.5%;
         padding-bottom: 2.5%;
@@ -100,27 +206,27 @@
       
       
      .main-pareto {
-     	height: 2600px;
-	margin-top: -350px;
-     	overflow:hidden;
+      height: 2600px;
+  margin-top: -350px;
+      overflow:hidden;
      }
      
      .tab-content{
-      	overflow:hidden !important;
+        overflow:hidden !important;
      }
 
      
      .carousel-caption {
-	position: relative !important;
-	left: inherit !important;
-	right: inherit !important;
-	bottom: inherit !important;
-	z-index: 10;
-	padding-top: inherit !important;
-	padding-bottom: inherit !important;
-	}
+  position: relative !important;
+  left: inherit !important;
+  right: inherit !important;
+  bottom: inherit !important;
+  z-index: 10;
+  padding-top: inherit !important;
+  padding-bottom: inherit !important;
+  }
 
      .carousel-control{
-     	background:none !important;
-     	
+      background:none !important;
+      
      }
